# ecs-system

./: .gitignore  CMakeLists.txt  README.md  devdiary.md
ecs-core/: CMakeLists.txt
ecs-core/include/: ArchetypeQuery.h  Archetypes.h  ArchetypesDatabase.h  ArchetypesRegistry.h  BatchComponentActionProcessor.h  CompactString.h  ComponentArray.h  ComponentData.h  ComponentsDatabase.h  ComponentsRegistry.h  ECSInstance.h  Entity.h  ISystem.h  PackedComponentArray.h  QueryTypes.h  Types.h  World.h
ecs-core/include/Containers/: DynamicBucketAllocators.h  GraphNode.h  MemoryBlocksFreeList.h  PoolMemoryAllocator.h  RingBuffer.h  SetPoolAllocator.h  SingleBlockAllocatorTraits.h  SingleBlockChunkAllocator.h  SingleBlockFreeListAllocator.h  UnorderedMapPoolAllocator.h  memory.h  rbtree.h  sm_rbtree.h
ecs-core/include/Core/: ArchetypeQuery.h  Archetypes.h  ArchetypesRegistry.h  CompactString.h  ComponentData.h  ComponentsRegistry.h  Delegates.h  Entity.h  IDGenerator.h  ISystem.h  Types.h  World.h
ecs-core/include/Logging/: Logger.h
ecs-core/include/Profiling/: CycleCounter.h  FrameData.h  Profiler.h  ProfilerGraphicsApp.h  ProfilingCore.h  ProfilingSystem.h
ecs-core/src/: ArchetypeQuery.cpp  Archetypes.cpp  ArchetypesDatabase.cpp  ArchetypesRegistry.cpp  BatchComponentActionProcessor.cpp  ComponentArray.cpp  ComponentsDatabase.cpp  ComponentsRegistry.cpp  ECSInstance.cpp  Entity.cpp  PackedComponentArray.cpp  QueryTypes.cpp  World.cpp
ecs-core/src/Containers/: DynamicBucketAllocators.cpp  MemoryBlocksFreeList.cpp  PoolMemoryAllocator.cpp  memory.cpp
ecs-core/src/Core/: Archetypes.cpp  ArchetypesRegistry.cpp  BatchComponentActionProcessor.cpp  ComponentsRegistry.cpp  Entity.cpp  PackedComponentArray.cpp  World.cpp
ecs-core/src/Logging/: Logger.cpp
ecs-core/src/Profiling/: CycleCounter.cpp  FrameData.cpp  Profiler.cpp  ProfilerGraphicsApp.cpp  ProfilingSystem.cpp
ecs-profiler/: CMakeLists.txt
ecs-profiler/profiler-app/: CMakeLists.txt
ecs-profiler/profiler-app/include/: ProfilerApp.h
ecs-profiler/profiler-app/src/: ProfilerApp.cpp  main.cpp
ecs-profiler/profiler-core/: CMakeLists.txt
ecs-profiler/profiler-core/include/: CallGraph.h  CycleCounter.h  FileWriter.h  FrameData.h  Profiler.h  Session.h
ecs-profiler/profiler-core/src/: CallGraph.cpp  CycleCounter.cpp  FileWriter.cpp  FrameData.cpp  Profiler.cpp  Session.cpp
ecs-runner/: CMakeLists.txt
ecs-runner/src/: main.cpp
ecs-test/: CMakeLists.txt
ecs-test/src/: test_archetypes.cpp  test_compact_string.cpp  test_component_array.cpp  test_delegates.cpp  test_ecs.cpp  test_memory.cpp  test_memory_blocks_free_list.cpp  test_queries.cpp  test_rbtree.cpp  test_unique_ids.cpp  test_world.cpp
